@@ -2,6 +2,7 @@
             ESP8266: esp8266 wifi getStatus doesn't show savedMode (fix #752)
             ESP8266: cleanup defines WIFI_DBG and NET_DBG for RELEASE
             ESP8266: switch to single ld file eagle.app.v6.new.2048.ld for ESP8266_4MB board
+            Allow JS modules to be built-in by adding files to JSMODULESOURCES
 
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
